--- a/miniproiect.html
+++ b/miniproiect.html
@@ -16,9 +16,9 @@
       <h5>Ghiceste butonul</h5>
     </div>
     <div class="d-grid gap-4 col-6 mx-auto">
-      <button id="btn1" type="button" onclick="ghiceste1()" value="Display">Button1</button>
-      <button id="btn2" type="button" onclick="ghiceste2()" value="Display">Button2</button>
-      <button id="btn3" type="button" onclick="ghiceste3()" value="Display">Button3</button>
+      <button id="btn1" type="button" onclick="ghiceste()" value="Display">Button1</button>
+      <button id="btn2" type="button" onclick="ghiceste()" value="Display">Button2</button>
+      <button id="btn3" type="button" onclick="ghiceste()" value="Display">Button3</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script>
@@ -27,27 +27,14 @@
         Button3 = 3;
         var n = Math.floor(Math.random() + 1);
         function ghiceste1(){
-          if (Button1 == n) {
-          alert("Ai ghicit");
-        } else {
-          alert("Mai incearca");
+          var n = Math.floor(Math.random() + 1);
+          if (Button1 == n)
+            alert("Ai ghicit");
+          if (Button2 == n)
+            alert("ai ghicit");
+          else
+            alert("ai ghicit");
         }
-      }
-        function ghiceste2(){
-          if (Button2== n) {
-          alert("Ai ghicit");
-        } else {
-          alert("Mai incearca");
-        }
-      }
-        function ghiceste3(){
-          if (Button3 == n) {
-          alert("Ai ghicit");
-        } else {
-          alert("Mai incearca");
-        }
-      }
-        
       </script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
