--- a/miniproiect.html
+++ b/miniproiect.html
@@ -22,18 +22,23 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script>
-        Button1 = 1;
-        Button2 = 2;
-        Button3 = 3;
-        var n = Math.floor(Math.random() + 1);
-        function ghiceste1(){
+        function ghiceste(){
+          Button1 = 1;
+          Button2 = 2;
+          Button3 = 3;
           var n = Math.floor(Math.random() + 1);
-          if (Button1 == n)
+          if (n == Button1)
             alert("Ai ghicit");
-          if (Button2 == n)
-            alert("ai ghicit");
           else
-            alert("ai ghicit");
+            alert("Mai incearca..");
+          if (n == Button2)
+            alert("Ai ghicit");
+          else
+            alert("Mai incearca..");
+          if (n == Button3)
+            alert("Ai ghicit");
+          else
+            alert("Mai incearca..");
         }
       </script>
 
