--- a/miniproiect.html
+++ b/miniproiect.html
@@ -16,36 +16,29 @@
       <h5>Ghiceste butonul</h5>
     </div>
     <div class="d-grid gap-4 col-6 mx-auto">
-      <button id="btn1" type="button" onclick="ghiceste()" value="Display">Button1</button>
-      <button id="btn2" type="button" onclick="ghiceste()" value="Display">Button2</button>
-      <button id="btn3" type="button" onclick="ghiceste()" value="Display">Button3</button>
+      <button id="btn1" > Button1 </button>
+      <button id="btn2" > Button2 </button>
+      <button id="btn3" > Button3 </button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script>
-        function ghiceste(){
-          Button1 = 1;
-          Button2 = 2;
-          Button3 = 3;
-          var n = Math.floor(Math.random() + 1);
-          if (n == Button1)
-            alert("Ai ghicit");
-          else
-            alert("Mai incearca..");
-          if (n == Button2)
-            alert("Ai ghicit");
-          else
-            alert("Mai incearca..");
-          if (n == Button3)
-            alert("Ai ghicit");
-          else
-            alert("Mai incearca..");
-        }
-      </script>
+    var btn1 = document.getElementById("btn1");
+    btn1.addEventListener("click", alertMe);
+    var btn2 = document.getElementById("btn2");
+    btn2.addEventListener("click", alertMe);
+    var btn3 = document.getElementById("btn3");
+    btn3.addEventListener("click", alertMe);
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    -->
+    function alertMe(){
+      if (btn1.click) {
+        alert("Ai ghicit");
+      }
+      else if (btn2.click) {
+        alert("Ai ghicit");
+      }
+      else {
+        alert("Ai ghicit");
+      }
+    }
+    </script>
   </body>
 </html>
