--- a/miniproiect.html
+++ b/miniproiect.html
@@ -4,10 +4,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
     <title>Ghiceste butonul</title>
   </head>
   <body>
@@ -16,27 +12,19 @@
       <h5>Ghiceste butonul</h5>
     </div>
     <div class="d-grid gap-4 col-6 mx-auto">
-      <button id="btn1" > Button1 </button>
-      <button id="btn2" > Button2 </button>
-      <button id="btn3" > Button3 </button>
+      <button type="button" id="1" onclick="alertMe(this.id)" >Button 1</button>
+		  <button type="button" id="2" onclick="alertMe(this.id)" >Button 2</button>
+		  <button type="button" id="3" onclick="alertMe(this.id)" >Button 3</button>
+      </div>
     </div>
     <script>
-    var btn1 = document.getElementById("btn1");
-    btn1.addEventListener("click", alertMe);
-    var btn2 = document.getElementById("btn2");
-    btn2.addEventListener("click", alertMe);
-    var btn3 = document.getElementById("btn3");
-    btn3.addEventListener("click", alertMe);
 
-    function alertMe(){
-      if (btn1.click) {
+    function alertMe(clicked_id){
+      var x = Math.floor((Math.random() * 3) + 1);
+      if (x == clicked_id) {
         alert("Ai ghicit");
-      }
-      else if (btn2.click) {
-        alert("Ai ghicit");
-      }
-      else {
-        alert("Ai ghicit");
+      } else {
+        alert("Mai incearca");
       }
     }
     </script>
